--- a/src/App.css
+++ b/src/App.css
@@ -2,10 +2,10 @@
 
 body {
   font-family: Arial, sans-serif;
-  background-image: url('/Users/ahazbhatti/Documents/ahaz-visa-app/book.jpg'); /* Adjust the path to your image */
-  background-size: cover; /* Ensures the image covers the entire background */
-  background-repeat: no-repeat; /* Prevents image repetition */
-  background-position: center; /* Centers the image */
+  background-image: url('/Users/ahazbhatti/Documents/ahaz-visa-app/book.jpg'); 
+  background-size: cover; 
+  background-repeat: no-repeat; 
+  background-position: center; 
   margin: 0;
   padding: 0;
 }
@@ -14,7 +14,7 @@ body {
   max-width: 800px;
   margin: auto;
   padding: 20px;
-  background: rgba(174, 30, 30, 0.8); /* Add some transparency to the container */
+  background: rgba(174, 30, 30, 0.8); 
   border-radius: 5px;
   box-shadow: 0 2px 10px rgba(153, 20, 20, 0.1);
 }
@@ -37,10 +37,10 @@ h1 {
 .book-card h2 {
   margin: 0;
   font-size: 1.5em;
-  color: white; /* Change book title color to white */
+  color: white; 
 }
 
 .book-card p {
   margin: 5px 0;
-  color: white; /* Change paragraph text color to white */
+  color: white; 
 }
